[gd_scene load_steps=16 format=3 uid="uid://dy054rt33fipy"]

[ext_resource type="Texture2D" uid="uid://cwgw6nclxpovh" path="res://assets/sprites/KoopaShell.png" id="1_0d64o"]
[ext_resource type="Script" path="res://scripts/Enemies/koopa.gd" id="1_wehw3"]
[ext_resource type="Texture2D" uid="uid://c52okmi4l2vo6" path="res://assets/sprites/Koopa.png" id="2_3j0s2"]
[ext_resource type="Shape2D" uid="uid://peurx1yls7qs" path="res://Resources/CollisionShapes/koopa_out_of_shell.tres" id="2_ujtvw"]
[ext_resource type="Script" path="res://scripts/Enemies/top_enemy_collider.gd" id="3_x6bk3"]
[ext_resource type="AudioStream" uid="uid://dst6dbuwdv334" path="res://assets/sounds/smb_kick.wav" id="4_424a5"]
[ext_resource type="Shape2D" uid="uid://cvuoyfatv238s" path="res://Resources/CollisionShapes/koopa_in_shell.tres" id="5_t6gat"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p4iya"]
atlas = ExtResource("2_3j0s2")
region = Rect2(0, 0, 17, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_gay85"]
atlas = ExtResource("2_3j0s2")
region = Rect2(17, 0, 17, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_y0gpx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0d64o")
}],
"loop": true,
"name": &"in_shell",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4iya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gay85")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_4maxp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ujtvw")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_erwgg"]
resource_name = "death_by_shell"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_x8dqu"]
resource_name = "shell"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enter_shell"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_t6gat")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f57r7"]
_data = {
"RESET": SubResource("Animation_4maxp"),
"death_by_shell": SubResource("Animation_erwgg"),
"shell": SubResource("Animation_x8dqu")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ngupp"]
size = Vector2(16, 8)

[node name="Koopa" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_wehw3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4.5)
shape = ExtResource("2_ujtvw")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_y0gpx")
animation = &"walk"
autoplay = "walk"

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(9, 0)
collision_mask = 7

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(-9, 0)
collision_mask = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f57r7")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("3_x6bk3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_ngupp")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_424a5")
bus = &"SFX"

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
